--- a/Containers-pipeline/Jenkinsfile
+++ b/Containers-pipeline/Jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
 			steps {
 				withAWS(region:'us-west-2', credentials:'ecr_credentials') {
 					sh '''
-						kubectl config use-context arn:aws:eks:us-west-2:546547842218:cluster/capstonecluster
+						kubectl config use-context arn:aws:eks:us-west-2:292152339671:cluster/capstone-cluster
 					'''
 				}
 			}
